zapoceta implementacija jezika i ispravljeni neki bugovi

--- a/resources/Translation.properties
+++ b/resources/Translation.properties
@@ -2,7 +2,7 @@ _Save = _Save
 _Print = _Print
 _Exit = _Exit
 _Options = _Options
-_About = _About
+_About = _About //nesto
 Subject = Subject
 Author/s = Author/s
 ResearchPapers = Research Papers
