--- a/resources/Translation_eng.properties
+++ b/resources/Translation_eng.properties
@@ -9,3 +9,19 @@ ResearchPapers = Research Papers
 ResearchPaper = Research Paper
 Search = Search:
 Language = Language
+Name = Name:
+Authors = Authors:
+Close = Close:
+Subject1 = Subject:
+University = University/Institute:
+Surname = Surname:
+Title = Title:
+Cancel = Cancel
+Text = Text:
+ResPapName = Research paper name:
+Keywords = Keywords:
+AddNew = Add new
+Creator = Creator:
+Researchpapersdatabase = Research papers database
+Version/date = Version/date:
+Aplication = Aplication:
