Uradjen novi tab koji izlistava sve autore, podatke o njima i sve radove na kojima je pojedinacni autor radio.

--- a/resources/Translation_eng.properties
+++ b/resources/Translation_eng.properties
@@ -11,6 +11,7 @@ Search = Search:
 Language = Language
 Name = Name:
 Authors = Authors:
+Authors1 = Authors
 Close = Close:
 Subject1 = Subject:
 University = University/Institute:
@@ -25,3 +26,7 @@ Creator = Creator:
 Researchpapersdatabase = Research papers database
 Version/date = Version/date:
 Aplication = Aplication:
+Datum = Datum
+Name1 = Name
+Title1 = Title
+University1 = University/Institute
