--- a/resources/Translation_eng.properties
+++ b/resources/Translation_eng.properties
@@ -1,8 +1,8 @@
-_Save = _Save
-_Print = _Print
-_Exit = _Exit
-_Options = _Options
-_About = _About
+Save = _Save
+Print = _Print
+Exit = _Exit
+Options = _Options
+About = _About
 Subject = Subject
 Author/s = Author/s
 ResearchPapers = Research Papers
